# UniversalLanguageInterface

./: .gitignore  .travis.yml  HaskellPythonBridge.hs  LICENSE  Makefile  README.md  UniversalLanguageInterface.py  callee.py  caller.py
haskell/UniversalLanguageInterface/: README.md  UniversalLanguageInterface.cabal  stack.yaml
haskell/UniversalLanguageInterface/src/: UniversalLanguageInterface.hs
haskell/testULI/: README.md  stack.yaml  testULI.cabal
haskell/testULI/app/: CabalCaller.hs  Callee.hs  Caller.hs  FunctionCollections.hs  StackCaller.hs
nodejs/: functions.js  index.js  package-lock.json  package.json
python3/: setup.py  test_python.py  upload_to_pypitest.sh
python3/UniversalLanguageInterface/: __init__.py  main.py
python3/test/: .gitignore  callee.py  caller.py  caller_nonuli.py  test_functions.py
test/integrationTestULI/: README.md  integrationTestULI.cabal
test/integrationTestULI/app/: Main.hs
test/integrationTestULI/src/: Lib.hs
test/test_environment/: Dockerfile
test/test_files/: HaskellCallee.hs  HaskellFunctionCollections.hs  THaskellCallHaskell.hs  THaskellCallNodejs.hs  THaskellCallPython3.hs  T_nodejs_call_nodejs.js  T_python3_call_haskell.py  T_python3_call_python3.py  nodejs_callee.js  nodejs_test_functions.js  python3_callee.py  python3_test_functions.py
